--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             Your Favorite One Page Multi Purpose Template
           </h1>
           <h2 class="intro__subtitle">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent
+            Lorem ipsum dolor11111 sit amet, consectetur adipiscing elit. Praesent
             commodo cursus magna vel scelerisque nisl consectetur et.
           </h2>
           <a class="button button--red" href="#">Find Out More</a>
